--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   google_fonts: ^6.3.1
   pluto_grid: ^8.0.0
   flutter_svg: ^2.2.1
+  firebase_core: ^4.1.0
+  firebase_auth: ^6.0.2
 
 dev_dependencies:
   flutter_test:
