--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_svg: ^2.2.1
   firebase_core: ^4.1.0
   firebase_auth: ^6.0.2
+  firebase_database: ^12.0.1
 
 dev_dependencies:
   flutter_test:
